--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-members = ["day1", "day2", "day3", "day4", "day5", "util"]
+members = ["day1", "day2", "day3", "day4", "day5", "day6", "util"]
 
 resolver = "2"
