--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,14 @@
 [workspace]
-members = ["day1", "day2", "day3", "day4", "day5", "day6", "day7", "util"]
+members = [
+    "day1",
+    "day2",
+    "day3",
+    "day4",
+    "day5",
+    "day6",
+    "day7",
+    "day8",
+    "util",
+]
 
 resolver = "2"
