--- a/util/Cargo.toml
+++ b/util/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
 clap = { version = "4", features = ["derive"] }
+reqwest = { version = "0.11", features = ["blocking"] }
